--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
             position: absolute;
             background: #fff;
             border-radius: 50%;
-            opacity: 0.3;
+            opacity: 0.2;
             animation: floatUp linear infinite;
         }
 
         @keyframes floatUp {
             0% { transform: translateY(110vh) scale(0); opacity: 0; }
-            50% { opacity: 0.4; }
-            100% { transform: translateY(-10vh) scale(1.5); opacity: 0; }
+            50% { opacity: 0.3; }
+            100% { transform: translateY(-10vh) scale(1.2); opacity: 0; }
         }
 
         /* --- HEADER --- */
@@ -101,7 +101,8 @@
 
         .card-header { display: flex; align-items: center; gap: 20px; margin-bottom: 20px; }
         
-        .game-icon { width: 70px; height: 70px; border-radius: 18px; object-fit: cover; border: 1px solid rgba(255,255,255,0.1); }
+        /* UPDATED TSUNAMI IMAGE STYLES */
+        .game-icon { width: 75px; height: 75px; border-radius: 18px; object-fit: cover; border: 2px solid rgba(99, 102, 241, 0.3); }
 
         .status-tag { font-size: 10px; font-weight: 800; color: var(--success); text-transform: uppercase; display: flex; align-items: center; gap: 5px; }
         .card-title { font-size: 24px; font-weight: 900; font-style: italic; text-transform: uppercase; }
@@ -117,12 +118,12 @@
             width: 100%; background: var(--primary-glow); color: white; border: none; 
             padding: 18px; border-radius: 20px; font-weight: 800; cursor: pointer; transition: 0.3s; 
         }
-        .copy-btn:hover { background: var(--accent-purple); transform: translateY(-3px); }
+        .copy-btn:hover { background: var(--accent-purple); transform: translateY(-3px); box-shadow: 0 10px 20px rgba(99, 102, 241, 0.2); }
 
         /* --- BOT --- */
         .help-container { position: fixed; bottom: 30px; right: 30px; display: flex; flex-direction: column; align-items: flex-end; z-index: 100; }
         .help-bubble { background: var(--accent-purple); padding: 10px 20px; border-radius: 20px 20px 5px 20px; font-size: 12px; font-weight: bold; margin-bottom: 10px; }
-        .bot-btn { width: 70px; height: 70px; background: linear-gradient(135deg, var(--primary-glow), var(--accent-purple)); border-radius: 25px; display: flex; align-items: center; justify-content: center; font-size: 30px; cursor: pointer; }
+        .bot-btn { width: 70px; height: 70px; background: linear-gradient(135deg, var(--primary-glow), var(--accent-purple)); border-radius: 25px; display: flex; align-items: center; justify-content: center; font-size: 30px; cursor: pointer; border: 2px solid rgba(255,255,255,0.1); }
 
         #toast { position: fixed; top: 20px; left: 50%; transform: translateX(-50%) translateY(-100px); background: var(--success); padding: 12px 30px; border-radius: 50px; font-weight: bold; transition: 0.5s; z-index: 1000; }
         #toast.show { transform: translateX(-50%) translateY(0); }
@@ -158,11 +159,11 @@
     <div class="card-grid">
         <div class="script-card">
             <div class="card-header">
-                <img src="https://cdn.discordapp.com/attachments/1375087867084144763/1477547833383977092/392206df-19ba-4c55-9336-8ce993927115.jpg?ex=69a52926&is=69a3d7a6&hm=e0e176e976739b270225554580b98b63b3053bb58a98ffe4c075479ca968c383&" class="game-icon" alt="Tsunami">
+                <img src="https://cdn.discordapp.com/attachments/1375087867084144763/1477548795813298176/noFilter_1.webp?ex=69a52a0c&is=69a3d88c&hm=ef181e03cd28c9334f4b384324a66e83b2e23b017e866c8c66072c61d2dc2b6d&" class="game-icon" alt="Tsunami Escape">
                 <div>
                     <div class="status-tag">● Working</div>
                     <div class="card-title">Tsunami Script</div>
-                    <div class="card-desc">The ultimate escape for trenches.</div>
+                    <div class="card-desc">The ultimate escape for the trenches.</div>
                 </div>
             </div>
             <div class="script-display">loadstring(game:HttpGet("https://raw.githubusercontent.com/luacoder312/ohioscripts/refs/heads/main/loader.lua"))()</div>
@@ -178,12 +179,12 @@
     <script>
         // Particles
         const container = document.getElementById('particle-container');
-        for (let i = 0; i < 40; i++) {
+        for (let i = 0; i < 35; i++) {
             const p = document.createElement('div');
             p.className = 'particle';
             p.style.left = Math.random() * 100 + 'vw';
-            p.style.width = p.style.height = (Math.random() * 4 + 1) * 0.8 + 'px'; // Slimmer particles
-            p.style.animationDuration = (Math.random() * 5 + 5) + 's';
+            p.style.width = p.style.height = (Math.random() * 3 + 1) + 'px';
+            p.style.animationDuration = (Math.random() * 6 + 4) + 's';
             p.style.animationDelay = `-${Math.random() * 10}s`;
             container.appendChild(p);
         }
